Fixes loading error with FontAwesome package

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link href="style.css" rel="stylesheet" type="text/css" />
 
         <!--Links to Font-Awesome css-->
-        <link rel="stylesheet" type="text/css" href="font-awesome.min.css">
+        <link rel="stylesheet" type="text/css" href="font-awesome-4.7.0/css/font-awesome.min.css">
 
         <!--Links to Google Fonts-->
         <link href="https://fonts.googleapis.com/css?family=Bungee|Bungee+Hairline|Raleway:100,300,400,500,600,700" rel="stylesheet">
