--- a/index.html
+++ b/index.html
@@ -213,9 +213,9 @@
 
                 <aside class="submission">
                     
-                    <button class="submit forum">Submit New Post <i class="fa fa-pencil"></i></button>
-                    <button class="submit event">Create New Event <i class="fa fa-pencil"></i></button>
-                    <button class="submit club">Make New Club <i class="fa fa-pencil"></i></button>
+                    <button class="submit forum"><i class="fa fa-pencil"></i></button>
+                    <button class="submit event"><i class="fa fa-pencil"></i></button>
+                    <button class="submit club"><i class="fa fa-pencil"></i></button>
 
                 </aside>
 
@@ -251,5 +251,4 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-    <script type="text/javascript" src="js/actions.js"></script>
 </html>
